Factor out large generic additions in System.Linq for uap build (#31025)
* Factor out large generic additions in System.Linq

New generic types in System.Linq are causing significant size-on-disk increases in AOT builds.  This change addresses some of them:

- The many implementations of IPartition and IIListProvider are causing significant binary size increases for AOT.  I've factored out the majority of those large changes to only be used in a netcoreapp build, not in a uap build.  There are still code paths that test whether an object is IPartition or IIListProvider, but there are no types now in the UAP build that implement them.
- As part of this, I replaced several places where `EmptyPartition<TResult>.Instance` was being used directly to implement an `IEnumerable<T>`, changed them to use `Enumerable.Empty<T>`, and then changed `Enumerable.Empty<T>` so that on netcoreapp it returns `EmptyPartition<TResult>.Instance`, and on uap it returns `Array.Empty<T>`.  This also means now that code paths lighting-up on partitions will also light-up on `Enumerable.Empty<T>`.  It also means that I changed the empty partition's `IEnumerator.Reset` method to be a nop instead of throwing, to match the same behavior as array's `IEnumerator.Reset`.
- LargeArrayBuilder uses T[][], which introduces lots of new array types and corresponding interface instantiations, helper types, etc.  I've specialized LargeArrayBuilder in the UAP build to just be a thin wrapper around ArrayBuilder; we still end up with unnecessary instantiations of LargeArrayBuilder, but they're relatively small, and it saves everything to do with those T[][] instantiations.

* Rename files from netcoreapp/uap to SpeedOpt/SizeOpt

* Fix tests for Reset-becoming-nop change

--- a/src/System.Linq/src/System.Linq.csproj
+++ b/src/System.Linq/src/System.Linq.csproj
@@ -10,6 +10,37 @@
       <TargetGroup>netcoreapp</TargetGroup>
     </ContractProject>
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp'"> <!-- Optimize for speed -->
+    <Compile Include="System\Linq\AppendPrepend.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Concat.SpeedOpt.cs" />
+    <Compile Include="System\Linq\DefaultIfEmpty.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Distinct.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Enumerable.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Grouping.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Lookup.SpeedOpt.cs" />
+    <Compile Include="System\Linq\OrderedEnumerable.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Partition.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Range.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Repeat.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Reverse.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Select.SpeedOpt.cs" />
+    <Compile Include="System\Linq\SelectMany.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Skip.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Take.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Union.SpeedOpt.cs" />
+    <Compile Include="System\Linq\Where.SpeedOpt.cs" />
+    <Compile Include="$(CommonPath)\System\Collections\Generic\LargeArrayBuilder.SpeedOpt.cs">
+      <Link>System\Collections\Generic\LargeArrayBuilder.SpeedOpt.cs</Link>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetGroup)' == 'uap'"> <!-- Optimize for size -->
+    <Compile Include="System\Linq\Enumerable.SizeOpt.cs" />
+    <Compile Include="System\Linq\Skip.SizeOpt.cs" />
+    <Compile Include="System\Linq\Take.SizeOpt.cs" />
+    <Compile Include="$(CommonPath)\System\Collections\Generic\LargeArrayBuilder.SizeOpt.cs">
+      <Link>System\Collections\Generic\LargeArrayBuilder.SizeOpt.cs</Link>
+    </Compile>
+  </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp' or '$(TargetGroup)' == 'uap'">
     <Compile Include="$(CommonPath)\System\Collections\Generic\ArrayBuilder.cs">
       <Link>System\Collections\Generic\ArrayBuilder.cs</Link>
@@ -47,6 +78,8 @@
     <Compile Include="System\Linq\GroupJoin.cs" />
     <Compile Include="System\Linq\Intersect.cs" />
     <Compile Include="System\Linq\Iterator.cs" />
+    <Compile Include="System\Linq\IIListProvider.cs" />
+    <Compile Include="System\Linq\IPartition.cs" />
     <Compile Include="System\Linq\Join.cs" />
     <Compile Include="System\Linq\Last.cs" />
     <Compile Include="System\Linq\Lookup.cs" />
@@ -54,7 +87,6 @@
     <Compile Include="System\Linq\Min.cs" />
     <Compile Include="System\Linq\OrderBy.cs" />
     <Compile Include="System\Linq\OrderedEnumerable.cs" />
-    <Compile Include="System\Linq\Partition.cs" />
     <Compile Include="System\Linq\Range.cs" />
     <Compile Include="System\Linq\Repeat.cs" />
     <Compile Include="System\Linq\Reverse.cs" />
