Add back TypeBuilder.DefinePInvokeMethod
https://github.com/dotnet/corefx/issues/30355

--- a/src/System.Reflection.Emit/ref/System.Reflection.Emit.csproj
+++ b/src/System.Reflection.Emit/ref/System.Reflection.Emit.csproj
@@ -9,14 +9,17 @@
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp' OR '$(TargetGroup)' == 'uap'">
     <ProjectReference Include="..\..\System.Runtime\ref\System.Runtime.csproj" />
+    <ProjectReference Include="..\..\System.Runtime.InteropServices\ref\System.Runtime.InteropServices.csproj" />
     <ProjectReference Include="..\..\System.Reflection.Primitives\ref\System.Reflection.Primitives.csproj" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'uap10.0.16299'">
     <Reference Include="netstandard" />
     <Reference Include="System.Runtime" />
+    <Reference Include="System.Runtime.InteropServices" />
     <Reference Include="System.Reflection.Primitives" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\System.Reflection.Emit.ILGeneration\ref\System.Reflection.Emit.ILGeneration.csproj" />
   </ItemGroup>
 </Project>
+
