--- a/src/System.Windows.Extensions/src/Configurations.props
+++ b/src/System.Windows.Extensions/src/Configurations.props
@@ -9,6 +9,7 @@
     <BuildConfigurations>
       $(PackageConfigurations);
       netcoreapp-Windows_NT;
+      netfx;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
