--- a/src/System.Windows.Extensions/src/System.Windows.Extensions.csproj
+++ b/src/System.Windows.Extensions/src/System.Windows.Extensions.csproj
@@ -7,10 +7,17 @@
     <Configurations>netcoreapp-Windows_NT-Debug;netcoreapp-Windows_NT-Release;netcoreapp2.0-Windows_NT-Debug;netcoreapp2.0-Windows_NT-Release;netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup Condition="'$(TargetsWindows)' == 'true'">
+    <Compile Include="$(CommonPath)\Interop\Windows\Interop.Libraries.cs">
+      <Link>Common\Interop\Windows\Interop.Libraries.cs</Link>
+    </Compile>
+    <Compile Include="Interop\Windows\Interop.CertAddCertificateLinkToStore.cs" />
+    <Compile Include="Interop\Windows\Interop.CertDuplicateCertificateContext.cs" />
+    <Compile Include="Interop\Windows\Interop.CertEnumCertificatesInStore.cs" />
+    <Compile Include="Interop\Windows\Interop.CertOpenStore.cs" />
+    <Compile Include="Interop\Windows\Interop.CryptUIDlgCertificate.cs" />
     <Compile Include="System\Security\Cryptography\X509Certificate2UI.cs" />
     <Compile Include="System\Security\Cryptography\SafeX509Handles.cs" />
     <Compile Include="System\Security\Cryptography\X509Utils.cs" />
-    <Compile Include="System\Security\CAPI.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netfx'">
     <Reference Include="mscorlib" />
