namespace name change

--- a/src/System.Windows.Extensions/src/System.Windows.Extensions.csproj
+++ b/src/System.Windows.Extensions/src/System.Windows.Extensions.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProjectGuid>{E0C4E267-B1D6-463B-9C95-8C0D3C335924}</ProjectGuid>
-    <IsPartialFacadeAssembly Condition="'$(TargetsNetFx)' == 'true'">true</IsPartialFacadeAssembly>
     <GeneratePlatformNotSupportedAssemblyMessage Condition="'$(TargetGroup)' == 'netstandard' AND '$(OSGroup)' == 'AnyOS'">SR.PlatformNotSupported_X509Certificate2UI</GeneratePlatformNotSupportedAssemblyMessage>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Configurations>netcoreapp-Windows_NT-Debug;netcoreapp-Windows_NT-Release;netcoreapp2.0-Windows_NT-Debug;netcoreapp2.0-Windows_NT-Release;netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
@@ -15,13 +14,14 @@
     <Compile Include="Interop\Windows\Interop.CertEnumCertificatesInStore.cs" />
     <Compile Include="Interop\Windows\Interop.CertOpenStore.cs" />
     <Compile Include="Interop\Windows\Interop.CryptUIDlgCertificate.cs" />
-    <Compile Include="System\Security\Cryptography\X509Certificate2UI.cs" />
-    <Compile Include="System\Security\Cryptography\SafeX509Handles.cs" />
-    <Compile Include="System\Security\Cryptography\X509Utils.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\X509Certificate2UI.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\SafeX509Handles.cs" />
+    <Compile Include="System\Security\Cryptography\X509Certificates\X509Utils.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netfx'">
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Security.Cryptography.X509Certificates" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp' OR '$(TargetGroup)' == 'netcoreapp2.0'">
     <Reference Include="System.Resources.ResourceManager" />
