--- a/src/System.Windows.Extensions/ref/System.Windows.Extensions.csproj
+++ b/src/System.Windows.Extensions/ref/System.Windows.Extensions.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <ProjectGuid>{36A0298D-E01E-411D-A19B-19EEC60B9A8A}</ProjectGuid>
-    <IsPartialFacadeAssembly Condition="'$(TargetsNetFx)' == 'true'">true</IsPartialFacadeAssembly>
     <Configurations>netfx-Debug;netfx-Release;netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
@@ -10,5 +9,6 @@
   <ItemGroup Condition="'$(TargetsNetFx)' == 'true'">
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Security.Cryptography.X509Certificates" />
   </ItemGroup>
 </Project>
