Update System.Memory as inbox & expose LastIndexOf (#30897)
* Remove netstandard configurations from System.Memory

* Binplace harvested System.Memory

* Update packageIndex.json versions

* Replace some wrongly copied IndexOf calls

--- a/src/System.IO.Pipelines/ref/System.IO.Pipelines.csproj
+++ b/src/System.IO.Pipelines/ref/System.IO.Pipelines.csproj
@@ -10,9 +10,11 @@
     <Reference Include="System.Runtime" />
     <Reference Include="System.Threading.Tasks" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetsNetStandard)' == 'true'">
+    <Reference Include="System.Memory" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\System.Buffers\ref\System.Buffers.csproj" />
-    <ProjectReference Include="..\..\System.Memory\ref\System.Memory.csproj" />
     <ProjectReference Include="..\..\System.Threading.Tasks.Extensions\ref\System.Threading.Tasks.Extensions.csproj" />
   </ItemGroup>
 </Project>
