--- a/src/System.Windows.Extensions/Directory.Build.props
+++ b/src/System.Windows.Extensions/Directory.Build.props
@@ -2,8 +2,7 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\Directory.Build.props" />
     <PropertyGroup>
-    <AssemblyVersion>4.1.1.0</AssemblyVersion>
-    <AssemblyKey>MSFT</AssemblyKey>
-    <IsNETCoreApp>true</IsNETCoreApp>
+    <AssemblyVersion>4.0.0.0</AssemblyVersion>
+    <AssemblyKey>Open</AssemblyKey>
   </PropertyGroup>
 </Project>
