--- a/src/System.Windows.Extensions/ref/System.Windows.Extensions.csproj
+++ b/src/System.Windows.Extensions/ref/System.Windows.Extensions.csproj
@@ -5,8 +5,8 @@
   <ItemGroup>
     <Compile Include="System.Windows.Extensions.cs" />
   </ItemGroup>
-  <ItemGroup >
-    <Reference Include="System.Runtime" />
-    <Reference Include="System.Security.Cryptography.X509Certificates" />
+  <ItemGroup>
+    <ProjectReference Include="..\..\System.Runtime\ref\System.Runtime.csproj" />
+    <ProjectReference Include="..\..\System.Security.Cryptography.X509Certificates\ref\System.Security.Cryptography.X509Certificates.csproj" />
   </ItemGroup>
 </Project>
