Add more tests, rename and condition tests to gdiplusavailable

--- a/src/System.Drawing.Design.Primitives/ref/System.Drawing.Design.Primitives.csproj
+++ b/src/System.Drawing.Design.Primitives/ref/System.Drawing.Design.Primitives.csproj
@@ -5,7 +5,7 @@
     <Configurations>netcoreapp-Debug;netcoreapp-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="System.Drawing.Extensions.cs" />
+    <Compile Include="System.Drawing.Design.Primitives.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\System.ComponentModel\ref\System.ComponentModel.csproj" />
