feedback from review

--- a/src/System.IO.Ports/src/System.IO.Ports.csproj
+++ b/src/System.IO.Ports/src/System.IO.Ports.csproj
@@ -22,7 +22,7 @@
     <Compile Include="System\IO\Ports\SerialPinChange.cs" />
     <Compile Include="System\IO\Ports\SerialPinChangedEventArgs.cs" />
     <Compile Include="System\IO\Ports\SerialPinChangedEventHandler.cs" />
-    <Compile Include="System\IO\Ports\SerialPort.cs" />
+    <Compile Include="System\IO\Ports\SerialPort.Windows.cs" />
     <Compile Include="System\IO\Ports\StopBits.cs" />
   </ItemGroup>  
   <ItemGroup Condition="'$(TargetGroup)' != 'netfx' AND '$(TargetsWindows)' == 'true'">
