--- a/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
+++ b/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
@@ -7,6 +7,7 @@
     <Compile Include="Microsoft/VisualBasic/ComClassAttributeTests.cs" />
     <Compile Include="Microsoft/VisualBasic/HideModuleNameAttributeTests.cs" />
     <Compile Include="Microsoft/VisualBasic/MyGroupCollectionAttributeTests.cs" />
+    <Compile Include="Microsoft/VisualBasic/VBFixedArrayAttributeTests.cs" />
     <Compile Include="ConversionsTests.cs" />
     <Compile Include="OperatorsTests.cs" />
     <Compile Include="UtilsTests.cs" />
