--- a/src/Microsoft.VisualBasic/src/Microsoft.VisualBasic.vbproj
+++ b/src/Microsoft.VisualBasic/src/Microsoft.VisualBasic.vbproj
@@ -48,6 +48,7 @@
     <Compile Include="Microsoft\VisualBasic\MyGroupCollectionAttribute.vb" />
     <Compile Include="Microsoft\VisualBasic\Strings.vb" />
     <Compile Include="Microsoft\VisualBasic\VBFixedArrayAttribute.vb" />
+    <Compile Include="Microsoft\VisualBasic\VBFixedStringAttribute.vb" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetGroup)' == 'netstandard1.3'">
     <Reference Include="System.Runtime" />
