--- a/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
+++ b/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
@@ -9,6 +9,7 @@
     <Compile Include="Microsoft/VisualBasic/MyGroupCollectionAttributeTests.cs" />
     <Compile Include="Microsoft/VisualBasic/VBFixedArrayAttributeTests.cs" />
     <Compile Include="Microsoft/VisualBasic/VBFixedStringAttributeTests.cs" />
+    <Compile Include="Microsoft/VisualBasic/CompilerServices/DesignerGeneratedAttributeTests.cs" />
     <Compile Include="ConversionsTests.cs" />
     <Compile Include="OperatorsTests.cs" />
     <Compile Include="UtilsTests.cs" />
