--- a/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
+++ b/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
@@ -12,6 +12,7 @@
     <Compile Include="Microsoft/VisualBasic/CompilerServices/DesignerGeneratedAttributeTests.cs" />
     <Compile Include="Microsoft/VisualBasic/CompilerServices/OptionCompareAttributeTests.cs" />
     <Compile Include="Microsoft/VisualBasic/CompilerServices/OptionTextAttributeTests.cs" />
+    <Compile Include="Microsoft/VisualBasic/CompilerServices/StandardModuleAttributeTests.cs" />
     <Compile Include="ConversionsTests.cs" />
     <Compile Include="OperatorsTests.cs" />
     <Compile Include="UtilsTests.cs" />
